--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,16 @@ dependencies {
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
-    }}
+    }
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'dev.welbyseely.parallel.primes.PrimeCountRunner'
+        )
+    }
+}
 
 application {
     mainClass = 'dev.welbyseely.parallel.primes.PrimeCountRunner'
